9_Kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: "uzairc0des/uzair-portfolio:v1"
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: LoadBalancer
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
