9_Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  type: LoadBalancer
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
